scripts/manifest/scenario6/books_api.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fast-track-istio
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-api-deployment
  namespace: fast-track-istio
spec:
  selector:
    matchLabels:
      app: books-api
  replicas: 2
  minReadySeconds: 1
  progressDeadlineSeconds: 600
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: books-api
    spec:
      containers:
        - name: books-api
          image: fasttrackistio/books:1.0.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - name: http-books-api
              containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: books-api-service
  namespace: fast-track-istio
spec:
  selector:
    app: books-api
  ports:
    - name: http-books-api-service
      port: 80
      targetPort: http-books-api
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: books-api-vservice
  namespace: fast-track-istio
spec:
  hosts:
    - books.fast-track-istio.io
  gateways:
    - books-api-gateway
  http:
    - route:
        - destination:
            host: books-api-service
            port:
              number: 80
